gcc/testsuite/g++.dg/parse/error53.C
// PR c++/43652

static const char const * stdin_name = "<stdin>";  // { dg-error "19:duplicate" }
